fix overflow on p tags.

--- a/static/static/css/style-max.css
+++ b/static/static/css/style-max.css
@@ -157,7 +157,7 @@ p {
     padding: 0px;
     margin: 0px;
     line-height: 1.6;
-    overflow: auto;
+    //overflow: auto;
 }
 
 b,
